--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dev": "webpack serve --mode development",
     "serve": "webpack serve --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
+    "start": "node index.js"
     "analyze": "webpack --profile --json > stats.json && webpack-bundle-analyzer stats.json",
     "login": "tcb login",
     "logout": "tcb logout",
